# spt-notification

./: CMakeLists.txt  README.md  cef-headers.hpp  linux-keyboard-helpers.hpp  notification-app.cpp  notification-app.hpp  notification-client.cpp  notification-client.hpp  notification-scheme.cpp  notification-scheme.hpp  notification-version.h  spt-notification-page.manifest  spt-notification-plugin.cpp  spt-notification-source-audio.cpp  spt-notification-source.cpp  spt-notification-source.hpp
build-aux/: .run-format.zsh
cmake/: feature-panels.cmake  os-linux.cmake  os-macos.cmake  os-windows.cmake
cmake/macos/: Info.plist.in
cmake/windows/: obs-browser-page.manifest
data/: error.html
data/locale/: af-ZA.ini  ar-SA.ini  az-AZ.ini  ba-RU.ini  be-BY.ini  bg-BG.ini  bn-BD.ini  ca-ES.ini  cs-CZ.ini  da-DK.ini  de-DE.ini  el-GR.ini  en-US.ini  eo-UY.ini  es-ES.ini  et-EE.ini  eu-ES.ini  fa-IR.ini  fi-FI.ini  fil-PH.ini  fr-FR.ini  gd-GB.ini  gl-ES.ini  he-IL.ini  hi-IN.ini  hr-HR.ini  hu-HU.ini  hy-AM.ini  id-ID.ini  it-IT.ini  ja-JP.ini  ka-GE.ini  kab-KAB.ini  kmr-TR.ini  ko-KR.ini  lt-LT.ini  mn-MN.ini  ms-MY.ini  nb-NO.ini  nl-NL.ini  (+24 more)
panel/: notification-panel-client.cpp  notification-panel-client.hpp  notification-panel-internal.hpp  notification-panel.cpp  notification-panel.hpp
spt-notification-page/: spt-notification-page-main.cpp
